--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,11 @@
   padding: 0;
   margin: 0;
 }
+
+.app__header {
+  display: flex;
+  padding: 20px;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
