--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,25 @@
   margin: 0;
 }
 
+body {
+  background-color: #f5f6fa;
+}
+
 .app__header {
   display: flex;
   padding: 20px;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px;
+}
+
+.app__stats {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.infoBox__cases {
+  font-weight: 500;
+  margin: 5px 0;
 }
