--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,18 @@ body {
 
 .app__header {
   display: flex;
-
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px;
+}
+
+.app__header > h1 {
+  font-size: 2rem;
+  color: #fc3c3c;
+}
+
+.app__dropdown {
+  background-color: white;
 }
 
 .app__stats {
@@ -32,6 +40,18 @@ body {
 
 .infoBox__cases {
   font-weight: 500;
+}
+
+.app__casesType {
+  text-transform: capitalize;
+}
+
+.app__graphTitle {
+  margin: 20px;
+}
+
+.lineGraph {
+  flex-grow: 1;
 }
 
 @media (max-width: 992px) {
